<resources>
    <string name="app_name">PhhTrebleApp</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_top_level">Phh Treble Settings</string>
    <string name="desc_activity_top_level">Device specific settings</string>
    <string name="remove_telephony_subsystem">Remove Telephony Subsystem</string>
    <string name="remove_root">Remove Root</string>
    <string name="continue_question">Continue?</string>
    <string name="title_activity_updater">Updater</string>
    <string name="update_not_found_title">Your system is up to date</string>
    <string name="update_found_title">System update available</string>
    <string name="checking_update_title">Checking for available update</string>
    <string name="update_found_button">Download and install</string>
    <string name="update_not_found_button">Check for update</string>
    <string name="error_dialog_title">Error</string>
    <string name="dynamic_device_message">Your device does not support OTA updates!</string>
    <string name="update_error_message">An error has occurred during download!\nPlease, try again later.</string>
    <string name="success_install_message">New update installed successfully.\nPlease, reboot now.</string>
    <string name="failed_download_message">New update failed to be downloaded.\nCheck your logs for more information.</string>
    <string name="failed_install_message">New update failed to be installed.\nCheck your logs for more information.</string>
    <string name="preparing_update_title">Preparing system update</string>
    <string name="downloading_update_title">Downloading system update</string>
    <string name="applying_update_title">Applying system update</string>
    <string name="applied_update_title">Update applied successfully</string>
    <string name="prevent_exit_message">The update is still ongoing. Leaving the app now will stop it.\nDo you really want to exit now?</string>
    <string name="warning_dialog_title">Warning</string>
    <string name="magisk_exists_message">Magisk was detected! If you proceed with the update you may lose Magisk or the installation may fail!</string>
    <string name="menu_delete_ota">Delete OTA files</string>
    <string name="delete_ota_message">Take in consideration that you may lose your userdata if you proceed!\nTo prevent this, cancel this dialog, reboot and flash the latest update on fastboot mode.\nDo you want to proceed anyway?</string>
    <string name="custom_system_ui_tuner">System UI Tuner</string>
    <string name="custom_ui">UI</string>
    <string name="custom_styles">Styles</string>
    <string name="custom_pointer_type">Pointer type</string>
    <string name="custom_accent_color">Accent color</string>
    <string name="custom_icon_shape">Icon shape</string>
    <string name="custom_icon_pack">Icon pack</string>
    <string name="custom_font_family">Font family</string>
    <string name="doze">Doze</string>
    <string name="doze_handwave">Enable Handwave gesture</string>
    <string name="doze_pocket">Enable out-of-pocket gesture</string>
    <string name="doze_chopchop">Enable Chop Chop gesture</string>
    <string name="general_audio">Audio</string>
    <string name="general_camera">Camera</string>
    <string name="general_display">Display</string>
    <string name="general_enable_dt2w">Enable DT2W</string>
    <string name="general_double_tap_to_wake">Enable double tap to wake</string>
    <string name="general_game_mode">Enable game mode</string>
    <string name="general_usb_otg">Enable USB OTG</string>
    <string name="general_misc">Misc</string>
    <string name="general_other">Other</string>
    <string name="general_requires_a_reboot">Requires a reboot</string>
    <string name="general_screen">Screen</string>
    <string name="general_telephony">Telephony</string>
    <string name="general_touchscreen">Touchscreen</string>
    <string name="general_alternate_audiopolicy">Use alternate audio policy</string>
    <string name="my_device">My device</string>
    <string name="oneplus_features">OnePlus features</string>
    <string name="nubia_features">Nubia features</string>
    <string name="vsmart_features">Vsmart features</string>
    <string name="huawei_fingerprint">Fingerprint</string>
    <string name="huawei_fingerprint_gestures">Enable Fingerprint gestures</string>
    <string name="huawei_touchscreen_glove_mode">Enable touchscreen glove mode</string>
    <string name="huawei_graphic_issues_workaround">Enable graphic issues workaround (recommended if ui is blurry)</string>
    <string name="huawei_fast_charge">Huawei fast charge</string>
    <string name="misc_sponsor">Sponsor phh</string>
    <string name="misc_mobile_network">Mobile network</string>
    <string name="misc_mobile_signal">Signal meter method</string>
    <string name="misc_huawei_headset_fix">Force headset switch (Huawei default)</string>
    <string name="misc_headset_devinput">Use alternate way to detect headsets</string>
    <string name="misc_disable_audio_effects">Disable audio effects</string>
    <string name="misc_disable_fast_audio">Disable fast audio</string>
    <string name="misc_rounded_corners">Set rounded corners diameter</string>
    <string name="misc_rounded_corners_overlay">Set forced/faked rounded corners diameter</string>
    <string name="misc_fps_divisor">FPS Divisor</string>
    <string name="misc_display_fps">Force FPS</string>
    <string name="misc_restart_systemui">Restart SystemUI</string>
    <string name="misc_restart_systemui_summary">Recommended after switching display resolution\nRequires root</string>
    <string name="misc_no_hwcomposer">Disable HW overlays</string>
    <string name="misc_no_hwcomposer_summary">Eats more CPU and battery</string>
    <string name="misc_aod">Force allow Always-On Display</string>
    <string name="misc_mediatek_touch_hint_rotate">Rotation perf hint instead of touch</string>
    <string name="misc_mediatek_touch_hint_rotate_summary">For Mediatek devices</string>
    <string name="misc_mediatek_ged_kpi">Mediatek GED KPI support</string>
    <string name="misc_mediatek_ged_kpi_summary">Might improve GPU performance for Mediatek devices</string>
    <string name="misc_backlight">Backlight</string>
    <string name="misc_low_gamma_brightness">Set alternative brightness curve</string>
    <string name="misc_linear_brightness">Set linear brightness curve</string>
    <string name="misc_disable_buttons_backlight">Disable backlight of hardware buttons if present</string>
    <string name="misc_backlight_scale">Force alternative backlight scale</string>
    <string name="misc_minimal_brightness">Allows setting brightness to the lowest possible</string>
    <string name="misc_multi_camera">Expose Aux cameras</string>
    <string name="misc_force_camera2api_hal3">Force Enable Camera2API HAL3</string>
    <string name="misc_camera_timestamp">Force Timestamp Source</string>
    <string name="misc_bluetooth">Bluetooth</string>
    <string name="misc_bluetooth_workarounds">Bluetooth workarounds</string>
    <string name="misc_max_aspect_ratio_pre_o">Compatibility max aspect ratio</string>
    <string name="misc_dynamic_sysbta">Use System Wide BT HAL</string>
    <string name="misc_allow_binder_thread_on_incoming_calls_summary">Possible workaround for 4G calling\nRequires a reboot</string>
    <string name="misc_force_navbar_off">Force navigation bar disabled</string>
    <string name="misc_storage_fuse">Disable FUSE storage layer</string>
    <string name="misc_storage_fuse_summary">This can (de/in)crease storage speed\nRequires a reboot</string>
    <string name="misc_restart_ril">Automatically restart RIL</string>
    <string name="misc_force_display_5g">Force display 5G network</string>
    <string name="misc_force_display_5g_summary">Displays 5G as an option for the preferred network type\nRequires a reboot</string>
    <string name="misc_disable_voice_call_in">Disable &quot;Voice Call In&quot; route</string>
    <string name="misc_disable_voice_call_in_summary">May fix echo or non-working audio on calls\nRequires a reboot</string>
    <string name="misc_dt2w">Double tap to wake</string>
    <string name="misc_dt2w_summary">Unlikely to work for you</string>
    <string name="misc_fod_color">Under-display fp color</string>
    <string name="misc_debugging">Debugging</string>
    <string name="misc_debug_sensors">Debug Sensors</string>
    <string name="misc_remotectl">Allow takeover of the device by phh for debugging</string>
    <string name="nubia_high_touch_sample_rate">Enable high touch sample rate</string>
    <string name="nubia_high_touch_sample_rate_summary">Drain more battery.</string>
    <string name="nubia_high_touch_sensitivity">Enable high touch sensitivity</string>
    <string name="nubia_high_touch_sensitivity_summary">While using gloves</string>
    <string name="nubia_touchscreen_game_mode_summaryOn">Auto stop fan is disabled</string>
    <string name="nubia_shoulder_btn">Enable shoulder buttons</string>
    <string name="nubia_shoulder_btn_summary">Shoulder buttons/triggers</string>
    <string name="nubia_bypass_charger">Enable bypass charger</string>
    <string name="nubia_bypass_charger_summaryOff">Charger -> Battery -> Phone</string>
    <string name="nubia_bypass_charger_summaryOn">Charger->Phone</string>
    <string name="nubia_fan_speed">FAN speed</string>
    <string name="nubia_fan_speed_summary">Support smart charging</string>
    <string name="nubia_leds">LEDs</string>
    <string name="nubia_redmagic_logo_breath">Make Redmagic logo breath</string>
    <string name="nubia_redmagic_led">REDMAGIC RGB</string>
    <string name="nubia_boosts">Boosts</string>
    <string name="nubia_boost_cpu">Boost CPU</string>
    <string name="nubia_boost_cache">Boost caches</string>
    <string name="nubia_boost_gpu">Boost GPU</string>
    <string name="nubia_boost_ufs">Boost UFS</string>
    <string name="nubia_boost_ufs_summaryOn">Increase Read/Write speed</string>
    <string name="oppo_dc_diming">Enable DC Diming</string>
    <string name="qualcomm_alternate_mediaprofile">Use alternate camera profile</string>
    <string name="qualcomm_disable_soundvolume_effect">Disable soundvolume effect</string>
    <string name="qualcomm_disable_soundvolume_effect_summary">May fix audio distorsion</string>
    <string name="qualcomm_disable_stereo_voip">Disable stereo support on VoIP</string>
    <string name="qualcomm_disable_stereo_voip_summary">May fix high pitched audio. Requires a reboot</string>
    <string name="samsung_audio_stereo">Enable stereo audio mode</string>
    <string name="samsung_disable_back_mic">Disable Built-In Back Mic</string>
    <string name="samsung_disable_back_mic_summary">May fix broken mic on video recording</string>
    <string name="samsung_esco_transport_unit_size">Set eSCO transport unit size</string>
    <string name="samsung_high_brightness">Enable extended brightness range</string>
    <string name="samsung_glove_mode">Enable glove mode</string>
    <string name="samsung_wireless_charging_transmit">Enable reversed wireless charging(If applicable)</string>
    <string name="samsung_fod_single_click">Clicking fingerprint turns device on</string>
    <string name="samsung_flash_strength">Set flash strength</string>
    <string name="samsung_flash_strength_summary">Usually values are integers between 1 and 5</string>
    <string name="samsung_camera_ids">Enable access to all cameras</string>
    <string name="samsung_camera_ids_summary">Requires Q vendor</string>
    <string name="samsung_workarounds">Workarounds</string>
    <string name="samsung_extra_sensors">Enable extra sensors</string>
    <string name="samsung_colorspace">Enable workaround for white-ish screen</string>
    <string name="samsung_broken_fingerprint">Enable workaround for broken fingerprint</string>
    <string name="samsung_backlight_multiplier">Set backlight scale/max backlight level</string>
</resources>