<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<Preference android:title="@string/misc_sponsor"
        android:key="key_sponsor">
		<intent
		    android:action="android.intent.action.VIEW"
		    android:data="https://github.com/sponsors/phhusson/" />
	</Preference>
	<PreferenceCategory android:title="@string/misc_mobile_network">
		<ListPreference
		    android:defaultValue="default"
		    android:entries="@array/pref_misc_mobile_signal"
		    android:entryValues="@array/pref_misc_mobile_signal_values"
		    android:key="key_misc_mobile_signal"
		    android:title="@string/misc_mobile_signal" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/general_audio">
		<SwitchPreference
            android:defaultValue="false"
            android:key="key_huawei_headset_fix"
            android:title="@string/misc_huawei_headset_fix" />
		<SwitchPreference
            android:defaultValue="false"
            android:key="key_misc_headset_devinput"
            android:title="@string/misc_headset_devinput" />
		<SwitchPreference
			android:defaultValue="false"
			android:key="key_misc_disable_audio_effects"
			android:title="@string/misc_disable_audio_effects" />
		<SwitchPreference
			android:defaultValue="false"
			android:key="key_misc_disable_fast_audio"
			android:title="@string/misc_disable_fast_audio" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/general_display">
		<EditTextPreference
            android:defaultValue="-1"
            android:key="key_misc_rounded_corners"
	        android:title="@string/misc_rounded_corners"
	        android:inputType="number"
            android:summary="@string/general_requires_a_reboot" />
		<EditTextPreference
			android:defaultValue="-1"
			android:key="key_misc_rounded_corners_overlay"
			android:title="@string/misc_rounded_corners_overlay"
			android:inputType="number" />
		<ListPreference
			android:defaultValue="1"
			android:entries="@array/pref_misc_fps_divisor"
			android:entryValues="@array/pref_misc_fps_divisor_values"
			android:key="key_misc_fps_divisor"
			android:title="@string/misc_fps_divisor" />
		<ListPreference
			android:defaultValue="-1"
			android:entries="@array/pref_misc_display_fps"
			android:entryValues="@array/pref_misc_display_fps_values"
			android:key="key_misc_display_fps"
			android:title="@string/misc_display_fps" />
        <Preference
            android:key="key_misc_restart_systemui"
            android:title="@string/misc_restart_systemui"
            android:summary="@string/misc_restart_systemui_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="key_misc_no_hwcomposer"
            android:title="@string/misc_no_hwcomposer"
            android:summary="@string/misc_no_hwcomposer_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="key_misc_aod"
            android:title="@string/misc_aod" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="key_misc_mediatek_touch_hint_rotate"
            android:title="@string/misc_mediatek_touch_hint_rotate"
            android:summary="@string/misc_mediatek_touch_hint_rotate_summary"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="key_misc_mediatek_ged_kpi"
            android:title="@string/misc_mediatek_ged_kpi"
            android:summary="@string/misc_mediatek_ged_kpi_summary"/>
		<ListPreference
    	    android:defaultValue="1.86"
    	    android:entries="@array/pref_misc_max_aspect_ratio_pre_o"
    	    android:entryValues="@array/pref_misc_max_aspect_ratio_pre_o_values"
    	    android:key="key_misc_max_aspect_ratio_pre_o"
    	    android:title="@string/misc_max_aspect_ratio_pre_o" />
		<SwitchPreference
            android:defaultValue="false"
            android:key="key_misc_force_navbar_off"
            android:title="@string/misc_force_navbar_off"
            android:summary="@string/general_requires_a_reboot" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/misc_backlight">
		<SwitchPreference
            android:defaultValue="false"
            android:key="key_misc_low_gamma_brightness"
            android:title="@string/misc_low_gamma_brightness" />
		<SwitchPreference
            android:defaultValue="false"
            android:key="key_misc_linear_brightness"
            android:title="@string/misc_linear_brightness" />
		<SwitchPreference
            android:defaultValue="false"
            android:key="key_misc_disable_buttons_backlight"
            android:title="@string/misc_disable_buttons_backlight"
            android:summary="@string/general_requires_a_reboot" />
		<SwitchPreference
            android:defaultValue="false"
            android:key="key_misc_backlight_scale"
            android:title="@string/misc_backlight_scale" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="key_misc_minimal_brightness"
            android:title="@string/misc_minimal_brightness" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/general_camera">
		<SwitchPreference
			android:defaultValue="false"
			android:key="key_misc_multi_camera"
			android:title="@string/misc_multi_camera" />
		<SwitchPreference
			android:defaultValue="false"
			android:key="key_misc_force_camera2api_hal3"
			android:title="@string/misc_force_camera2api_hal3" />
		<ListPreference
		    android:defaultValue="-1"
		    android:entries="@array/pref_misc_camera_timestamp"
		    android:entryValues="@array/pref_misc_camera_timestamp_values"
		    android:key="key_misc_camera_timestamp"
            android:title="@string/misc_camera_timestamp"
            android:summary="@string/general_requires_a_reboot" />
  </PreferenceCategory>
	<PreferenceCategory android:title="@string/misc_bluetooth">
		<ListPreference
			android:defaultValue="0"
			android:entries="@array/pref_misc_bluetooth"
			android:entryValues="@array/pref_misc_bluetooth_values"
			android:key="key_misc_bluetooth"
			android:title="@string/misc_bluetooth_workarounds" />
		<SwitchPreference
            android:defaultValue="true"
            android:key="key_misc_dynamic_sysbta"
            android:title="@string/misc_dynamic_sysbta" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/general_telephony">
		<SwitchPreference
			android:defaultValue="false"
			android:key="key_misc_allow_binder_thread_on_incoming_calls"
			android:summary="@string/misc_allow_binder_thread_on_incoming_calls_summary"
			android:title="@stting/misc_allow_binder_thread_on_incoming_calls" />
		<SwitchPreference
			android:defaultValue="false"
			android:key="key_misc_force_display_5g"
			android:title="@string/misc_force_display_5g"
			android:summary="@string/misc_force_display_5g_summary" />
		<SwitchPreference
			android:defaultValue="false"
			android:key="key_misc_disable_voice_call_in"
			android:title="@string/misc_disable_voice_call_in"
			android:summary="@string/misc_disable_voice_call_in_summary" />
		<SwitchPreference
				android:defaultValue="false"
				android:key="key_misc_restart_ril"
				android:title="@string/misc_restart_ril" />
		<Preference android:title="@string/remove_telephony_subsystem"
            android:key="key_misc_removetelephony" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/general_other">
		<SwitchPreference
            android:defaultValue="false"
            android:key="key_misc_storage_fuse"
            android:title="@string/misc_storage_fuse"
            android:summary="@string/misc_storage_fuse_summary" />
		<SwitchPreference
				android:defaultValue="false"
				android:key="key_misc_dt2w"
            android:title="@string/misc_dt2w"
            android:summary="@string/misc_dt2w_summary" />
		<ListPreference
		    android:defaultValue="00ff00"
		    android:entries="@array/pref_misc_fod_color"
		    android:entryValues="@array/pref_misc_fod_color_values"
		    android:key="key_misc_fod_color"
            android:title="@string/misc_fod_color" />
		<Preference android:title="Securize"
            android:key="key_misc_securize" />
	</PreferenceCategory>
    <PreferenceCategory android:title="@string/misc_debugging">
        <Preference android:title="@string/misc_debug_sensors">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="me.phh.treble.app"
                android:targetClass="me.phh.treble.app.DebugSensors" />
        </Preference>
		<SwitchPreference
            android:defaultValue="false"
            android:key="key_misc_remotectl"
            android:title="@string/misc_remotectl" />
    </PreferenceCategory>
</PreferenceScreen>
