<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general_touchscreen">
        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="nubia_double_tap_to_wake"
            android:title="@string/general_enable_dt2w"
            app:summary="@string/general_double_tap_to_wake" />
        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="nubia_high_touch_sample_rate"
            android:title="@string/nubia_high_touch_sample_rate"
            app:summary="@string/nubia_high_touch_sample_rate_summary" />
        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="nubia_high_touch_sensitivity"
            android:title="@string/nubia_high_touch_sensitivity"
            app:summary="@string/nubia_high_touch_sensitivity_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/general_misc">
        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="nubia_touchscreen_game_mode"
            android:title="@string/general_game_mode"
            app:summaryOn="@string/nubia_touchscreen_game_mode_summaryOn" />
        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="nubia_shoulder_btn"
            android:title="@string/nubia_shoulder_btn"
            app:summary="@string/nubia_shoulder_btn_summary" />
        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="nubia_bypass_charger"
            android:title="@string/nubia_bypass_charger"
            app:summaryOff="@string/nubia_bypass_charger_summaryOff"
            app:summaryOn="@string/nubia_bypass_charger_summaryOn" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_nubia_fan"
            android:entryValues="@array/pref_nubia_fan_values"
            android:key="nubia_fan_speed"
            android:title="@string/nubia_fan_speed"
            app:summary="@string/nubia_fan_speed_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/nubia_leds">
        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="nubia_redmagic_logo_breath"
            android:title="@string/nubia_redmagic_logo_breath" />
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_nubia_redmagic_led"
            android:entryValues="@array/pref_nubia_redmagic_led_values"
            android:key="nubia_redmagic_led"
            android:title="@string/nubia_redmagic_led" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/nubia_boosts">
        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="nubia_boost_cpu"
            android:title="@string/nubia_boost_cpu" />
        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="nubia_boost_cache"
            android:title="@string/nubia_boost_cache" />
        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="nubia_boost_gpu"
            android:title="@string/nubia_boost_gpu" />
        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="nubia_boost_ufs"
            android:title="@string/nubia_boost_ufs"
            app:summaryOn="@string/nubia_boost_ufs_summaryOn" />
    </PreferenceCategory>
</PreferenceScreen>
