<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="key_qualcomm_alternate_mediaprofile"
        android:title="@string/qualcomm_alternate_mediaprofile"
        android:summary="@string/general_requires_a_reboot" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="key_qualcomm_alternate_audiopolicy"
        android:title="@string/general_alternate_audiopolicy" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="key_qualcomm_disable_soundvolume_effect"
        android:title="@string/qualcomm_disable_soundvolume_effect"
        android:summary="@string/qualcomm_disable_soundvolume_effect_summary" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="key_qualcomm_disable_stereo_voip"
        android:title="@string/qualcomm_disable_stereo_voip"
        android:summary="@string/qualcomm_disable_stereo_voip_summary" />
</PreferenceScreen>
