<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/doze">
        <SwitchPreference
            android:defaultValue="false"
            android:key="key_doze_handwave"
            android:title="@string/doze_handwave" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="key_doze_pocket"
            android:title="@string/doze_pocket" />
        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="key_doze_chopchop"
            android:title="@string/doze_chopchop" />
    </PreferenceCategory>
</PreferenceScreen>
